--- a/index.html
+++ b/index.html
@@ -1,12 +1,211 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <title>Pages</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>I need help</h1>
+<header>
+  <div class="container-fluid bg-info px-5">
+    <div class="row">
+      <div class="col-2 py-5 text-start">
+        <img src="images/logo-toyota.jpg" class="d-block display: block w-50 h-70" alt="Logo">
+          TOYOTA - Керуй мрією!
+      </div>
+      <div class="col-8 py-5">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">TOYOTA, Вітає Вас!</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Ми</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Акції</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Пропозиції
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Автомобілі в наявності</a></li>
+                    <li><a class="dropdown-item" href="#">Ціни</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Запис на тест драйв</a></li>
+                    <li><a class="dropdown-item" href="#">Trade in</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" aria-disabled="true">Контакти</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Пошук</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
+
+<main>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-sm-12 col-lg-3 bg-info px-5 py-3 mr-3">
+        <div id="myCarouselLightning" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/in120.jpg" class="d-block w-100" alt="in120">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color: yellow">Салон</h5>
+                <p style="color: white">Ергономічний та комфортний</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/in2120.jpg" class="d-block w-100" alt="in2120">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color: white">Висока якість матеріалів</h5>
+                <p style="color: gold">Надійність та безпека</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/mount120.jpg" class="d-block w-100" alt="mount120">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color: white">Великий кліренс</h5>
+                <p style="color: white">З ним Ви зможете підкорити всі Вершини</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/up120.jpg" class="d-block w-100" alt="up120">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color: yellow">Сила та міць</h5>
+                <p style="color: white">Не лякає відсутність дороги</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/water120.jpg" class="d-block w-100" alt="water120">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 style="color: yellow">Потужний</h5>
+                <p style="color: white">Впевненість завжди</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#myCarouselLightning" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#myCarouselLightning" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-12 col-lg-6 bg-danger px-5 py-3 mr-3 ml-3">
+        <div class="acor-container">
+
+          <input type="radio" name="acor" id="acor1" checked="checked" />
+          <label for="acor1">Історія Марки TOYOTA</label>
+          <div class="acor-body">
+            <p>Японська автомобільна компанія була організована в 1935 р. як відділення заводу Toyoda Automatic
+              Loom Works, зайнятого виготовленням текстильних верстатів. Його глава Кіїчіро Тойода (Kiichiro
+              Toyoda) старший син власника компанії Сакічі Тойоди (Sakichi Toyoda) започаткував виробництво
+              автомобілів (легкових і вантажних) за американським зразком. Його дещо змінене прізвище і стало
+              торговою маркою фірми.
+            </p>
+          </div>
+
+          <input type="radio" name="acor" id="acor2" />
+          <label for="acor2">Історія TOYOTA в Україні</label>
+          <div class="acor-body">
+            <p>З 2004 року офіційна дилерська мережа реалізувала більше 100 тис. автомобілів марки Toyota. У 2009
+              році Toyota стала лідером серед імпортерів за обсягами продажів авто.
+              Офіційна мережа «Тойота-Україна» налічує 29 дилерських центрів і 30 сервісних станцій на всій
+              території країни та 5 дилерських центрів Lexus у Києві, Дніпропетровську, Львові та Харкові.
+            </p>
+          </div>
+
+          <input type="radio" name="acor" id="acor3" />
+          <label for="acor3">Діяльність в Україні</label>
+          <div class="acor-body">
+            <p>Марка вже кілька років перебуває в рейтингу самих популярних авто, випереджає її тільки Renault. У
+              2019 році українці купили 12618 нових «Тойот», у 2018 році — 9631 автомобіль.
+
+              Також «Тойота Україна» належить до ТОП-100 найбільших компаній у країні за 2019 рік. За даними
+              Держфіскальної служби, за 2018 рік автодилер заплатив у бюджет 599,9 млн грн податків. За даними ЗМІ,
+              компанія заробила в 2018 році 10,43 млрд грн.
+            </p>
+          </div>
+
+          <input type="radio" name="acor" id="acor4" />
+          <label for="acor4">Досвідчені фахівці</label>
+          <div class="acor-body">
+            <p>Для того, щоб влаштуватися на роботу в Тойота в Україні треба пройти дуже серйозне опитування. Після
+              цього декілька тижнів кандидата перевіряє служба безпеки, потім кандидата узгоджують на вищому півні.
+              В залежності від посади новачки, як правило, направляються на стажування до Японії, де отримують
+              знання від справжніх професіоналів.
+            </p>
+          </div>
+
+          <input type="radio" name="acor" id="acor5" />
+          <label for="acor5">Заслуги в Україні</label>
+          <div class="acor-body">
+            <p>Тойота Україна — в рейтингу кращих роботодавців. Весь персонал проходить спеціальну підготовку. Їх
+              навчають роботі з японською технікою та правилами роботи з клієнтами.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-12 col-lg-3 bg-info px-5 py-3 mr-3">
+        <iframe width="250" height="505" src="https://www.youtube.com/embed/O_3O-7cuVyY?si=QFQxSLLdwBT-VOlQ"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+</main>
+
+<footer>
+  <div class="container-fluid bg-info px-5">
+    <div class="row">
+      <div class="text-center">
+        <div class="video">
+              <iframe width="340" height="185" src="https://www.youtube.com/embed/-WKFC8R5mnU?si=zG5-NWzYfsydUDyu"
+              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+              encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
 
 </body>
 </html>
