--- a/index.html
+++ b/index.html
@@ -1,211 +1,109 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/output.css">
 </head>
-<body>
+<body class="bg-sky-950">
 
-<header>
-  <div class="container-fluid bg-info px-5">
-    <div class="row">
-      <div class="col-2 py-5 text-start">
-        <img src="images/logo-toyota.jpg" class="d-block display: block w-50 h-70" alt="Logo">
-          TOYOTA - Керуй мрією!
+ <header class="bg-sky-950 p-2 flex justify-around items-center">
+   <div class="text-4xl"><img src="images/logo1.jpg" alt="logo"></div>
+   <div class="text-2xl px-5">Детейлінг студія
+   <p class="color text-green-500 text-3xl px-5">Fresh LAB</p>
+   </div>
+
+   <nav class="hidden md:block">
+     <ul class="flex justify-around gap-2">
+       <li class="text-green-500"><a href="#">Про нас</a></li>
+       <li class="text-green-500"><a href="#">Наші Клієнти</a></li>
+       <li class="text-green-500"><a href="#">Послуги</a></li>
+       <li class="text-green-500"><a href="#">Ціни</a></li>
+     </ul>
+   </nav>
+   <div class="md:hidden">
+     <svg class="w-10 h-10" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+       <g clip-path="url(#clip0_105_1724)">
+         <path d="M3 6.00098H21M3 12.001H21M3 18.001H21" stroke="#32cd32" stroke-linecap="round" stroke-linejoin="round"
+          stroke-width="2"/>
+       </g>
+       <defs>
+         <clipPath id="clip0_105_1724">
+           <rect fill="white" height="24" transform="translate(0 0.000976562)" width="24"/>
+         </clipPath>
+       </defs>
+     </svg>
+   </div>
+ </header>
+<main>
+  <div class="flex">
+    <div class="h-80 w-2/3 relative">
+      <div class="absolute left-0 top-0 right-0 bottom-0 overflow-hidden h-auto"><img class="w-full"
+         src="images/m5.jpg" alt="m5">
       </div>
-      <div class="col-8 py-5">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">TOYOTA, Вітає Вас!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Ми</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Акції</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Пропозиції
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Автомобілі в наявності</a></li>
-                    <li><a class="dropdown-item" href="#">Ціни</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Запис на тест драйв</a></li>
-                    <li><a class="dropdown-item" href="#">Trade in</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" aria-disabled="true">Контакти</a>
-                </li>
-              </ul>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Пошук</button>
-              </form>
-            </div>
-          </div>
-        </nav>
+      <div class="absolute left-3 bottom-3 text-green-500 text-2xl overflow-auto hover:text-white">
+        Результати нашої роботи - ідеальний вигляд Вашого авто
+      </div>
+    </div>
+    <div class="h-80 w-1/3 relative">
+      <div class="absolute left-0 top-0 right-0 bottom-0 overflow-hidden h-auto"><img class="w-full"
+          src="images/8.jpg" alt="8">
+      </div>
+      <div class="absolute left-3 bottom-3 text-green-500 text-2xl overflow-auto hover:text-white">
+        Задоволені Клієнти
       </div>
     </div>
   </div>
-</header>
-
-<main>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 col-sm-12 col-lg-3 bg-info px-5 py-3 mr-3">
-        <div id="myCarouselLightning" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#myCarouselLightning" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/in120.jpg" class="d-block w-100" alt="in120">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 style="color: yellow">Салон</h5>
-                <p style="color: white">Ергономічний та комфортний</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/in2120.jpg" class="d-block w-100" alt="in2120">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 style="color: white">Висока якість матеріалів</h5>
-                <p style="color: gold">Надійність та безпека</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/mount120.jpg" class="d-block w-100" alt="mount120">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 style="color: white">Великий кліренс</h5>
-                <p style="color: white">З ним Ви зможете підкорити всі Вершини</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/up120.jpg" class="d-block w-100" alt="up120">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 style="color: yellow">Сила та міць</h5>
-                <p style="color: white">Не лякає відсутність дороги</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/water120.jpg" class="d-block w-100" alt="water120">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 style="color: yellow">Потужний</h5>
-                <p style="color: white">Впевненість завжди</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#myCarouselLightning" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#myCarouselLightning" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-
-      <div class="col-12 col-sm-12 col-lg-6 bg-danger px-5 py-3 mr-3 ml-3">
-        <div class="acor-container">
-
-          <input type="radio" name="acor" id="acor1" checked="checked" />
-          <label for="acor1">Історія Марки TOYOTA</label>
-          <div class="acor-body">
-            <p>Японська автомобільна компанія була організована в 1935 р. як відділення заводу Toyoda Automatic
-              Loom Works, зайнятого виготовленням текстильних верстатів. Його глава Кіїчіро Тойода (Kiichiro
-              Toyoda) старший син власника компанії Сакічі Тойоди (Sakichi Toyoda) започаткував виробництво
-              автомобілів (легкових і вантажних) за американським зразком. Його дещо змінене прізвище і стало
-              торговою маркою фірми.
-            </p>
-          </div>
-
-          <input type="radio" name="acor" id="acor2" />
-          <label for="acor2">Історія TOYOTA в Україні</label>
-          <div class="acor-body">
-            <p>З 2004 року офіційна дилерська мережа реалізувала більше 100 тис. автомобілів марки Toyota. У 2009
-              році Toyota стала лідером серед імпортерів за обсягами продажів авто.
-              Офіційна мережа «Тойота-Україна» налічує 29 дилерських центрів і 30 сервісних станцій на всій
-              території країни та 5 дилерських центрів Lexus у Києві, Дніпропетровську, Львові та Харкові.
-            </p>
-          </div>
-
-          <input type="radio" name="acor" id="acor3" />
-          <label for="acor3">Діяльність в Україні</label>
-          <div class="acor-body">
-            <p>Марка вже кілька років перебуває в рейтингу самих популярних авто, випереджає її тільки Renault. У
-              2019 році українці купили 12618 нових «Тойот», у 2018 році — 9631 автомобіль.
-
-              Також «Тойота Україна» належить до ТОП-100 найбільших компаній у країні за 2019 рік. За даними
-              Держфіскальної служби, за 2018 рік автодилер заплатив у бюджет 599,9 млн грн податків. За даними ЗМІ,
-              компанія заробила в 2018 році 10,43 млрд грн.
-            </p>
-          </div>
-
-          <input type="radio" name="acor" id="acor4" />
-          <label for="acor4">Досвідчені фахівці</label>
-          <div class="acor-body">
-            <p>Для того, щоб влаштуватися на роботу в Тойота в Україні треба пройти дуже серйозне опитування. Після
-              цього декілька тижнів кандидата перевіряє служба безпеки, потім кандидата узгоджують на вищому півні.
-              В залежності від посади новачки, як правило, направляються на стажування до Японії, де отримують
-              знання від справжніх професіоналів.
-            </p>
-          </div>
-
-          <input type="radio" name="acor" id="acor5" />
-          <label for="acor5">Заслуги в Україні</label>
-          <div class="acor-body">
-            <p>Тойота Україна — в рейтингу кращих роботодавців. Весь персонал проходить спеціальну підготовку. Їх
-              навчають роботі з японською технікою та правилами роботи з клієнтами.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-12 col-lg-3 bg-info px-5 py-3 mr-3">
-        <iframe width="250" height="505" src="https://www.youtube.com/embed/O_3O-7cuVyY?si=QFQxSLLdwBT-VOlQ"
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-                encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
 </main>
 
+  <section class="bg-sky-950 p-2 flex justify-around items-center">
+    <div class="text-2xl"><img src="images/moika.jpg" alt="moika"></div>
+    <div class="text-1xl text-green-500 px-5">Деякі водії дуже піклуються за своїм авто, але не бажають витрачати
+      кошти на якісні засоби для догляду за автомобілем, тому після першого маленького дощу їх автомобіль знову
+      потребує мийки, чи навіть після того, як його авто заляпає інша машина.
+      <p>Детейлінг студія "Fresh LAB" знає, як захистити Ваше авто від дощу, та не тільки</p>
+      <p>Наші послуги не дешеві, але якість нашої роботи дуже висока: інші будуть мити свої авто, а Ви будете їздити
+      на машині, як тільки після мийки. Наші засоби перевірені часом.</p>
+    </div>
+</section>
+
+<section>
+  <div class="flex">
+    <div class="h-80 w-2/3 relative">
+      <div class="absolute left-0 top-14 right-0 bottom-0 overflow-hidden h-auto text-1xl text-center text-green-500">
+        Ми дуже піклуємось за наших Клієнтів, тому використовуємо високоякісні матеріали. Велику увагу ми приділяємо
+        чистоті та прозорості лобового скла від чистоти якого залежить ваша безпека та життя. Ми бажаємо, щоб Ви могли
+          розгледіти на дорозі все важливе!
+      </div>
+    </div>
+    <div class="h-80 w-1/3 relative">
+      <div class="absolute left-0 top-0 right-0 bottom-0 overflow-hidden h-auto"><img class="w-full"
+        src="images/b5.jpg" alt="b5">
+      </div>
+    </div>
+  </div>
+</section>
+
 <footer>
-  <div class="container-fluid bg-info px-5">
-    <div class="row">
-      <div class="text-center">
-        <div class="video">
-              <iframe width="340" height="185" src="https://www.youtube.com/embed/-WKFC8R5mnU?si=zG5-NWzYfsydUDyu"
-              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-              encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
+  <div class="flex">
+    <div class="h-80 w-2/3 relative">
+      <div class="absolute left-0 top-0 right-0 bottom-0 overflow-hidden h-auto"><iframe width="560" height="315"
+         src="https://www.youtube.com/embed/Iy7-GGuxaiI?si=5LTHtT1p9LWAk-r1" title="YouTube video player"
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+          picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="h-80 w-1/3 relative">
+      <div class="absolute left-0 top-10 right-10 bottom-0 overflow-hidden h-auto text-green-500">
+        Кожен з нас хоче, щоб машина виглядала на всі 100, навіть в дощ та після нього, але не кожен з радістю відразу
+        вимиває свій авто, або не має часу, або не має сил. Тож довірте це нам! Ми можемо подбати за Ваш автомобіль
+        та Ви забудете, що таке наводити порядок в своєму авто!
+        <div>Наші контакти: м. Запоріжжя, пр. Соборний, 1. Електронна адреса: FreshLAB@gmail.com</div>
       </div>
     </div>
   </div>
 </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
 
 </body>
 </html>
